--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="stylesheet" href="bootstrap.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.30.0/theme/material.min.css" />
   <title>React App</title>
 </head>
 
@@ -31,5 +32,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+  crossorigin="anonymous">
 
 </html>
